@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - sort the arguments to kwalitee_ok, for smaller diffs between iterations
 
 2.08      2014-08-16 04:56:06Z
     - line numbers in shipped code are now almost the same (within 3) as
